--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "joi": "^14.3.1",
+    "nes.css": "^2.1.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1"
   },
