--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bootswatch": "^4.3.1",
     "joi": "^14.3.1",
     "vue": "^2.6.6",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
